--- a/app/globals.css
+++ b/app/globals.css
@@ -29,3 +29,7 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.pixelated {
+  image-rendering: pixelated;
+}
